@@ -39,6 +39,9 @@ public class TritiumConfigBase {
     @SubCategory("Tech Optimizations")
     public TechOptimizations techOptimizations = new TechOptimizations();
 
+    @SubCategory("Fast Random")
+    public FastRandom fastRandom = new FastRandom();
+
     @ClientOnly
     @SubCategory("Fixes")
     public Fixes fixes = new Fixes();
@@ -155,13 +158,43 @@ public class TritiumConfigBase {
         @SubCategory("FPSDisplay")
         public static FPSDisplay fpsDisplay = new FPSDisplay();
 
+        public enum Position {
+            TOP_LEFT,
+            TOP_RIGHT,
+            BOTTOM_LEFT,
+            BOTTOM_RIGHT,
+            CENTER
+        }
+
+        public enum DisplayMode {
+            AVG_ONLY,
+            CURRENT_ONLY,
+            ALL,
+            MAX_ONLY,
+            MIN_ONLY
+        }
+
+        public enum DecimalPlaces {
+            ZERO(0),
+            ONE(1),
+            TWO(2);
+
+            private final int value;
+
+            DecimalPlaces(int value) {
+                this.value = value;
+            }
+
+            public int value() {
+                return value;
+            }
+        }
+
         public static class FPSDisplay {
             public static boolean enabled = true;
 
-            @Range(min = 0, max = 4)
-            public static int position = 0;
-            @Range(min = 0, max = 4)
-            public static int displayMode = 1;
+            public static Position position = Position.TOP_LEFT;
+            public static DisplayMode displayMode = DisplayMode.CURRENT_ONLY;
 
             public static String textColor = "#FFFFFF";
 
@@ -170,8 +203,7 @@ public class TritiumConfigBase {
             @Range(min = 0, max = 1)
             public static float backgroundOpacity = 0.3f;
 
-            @Range(min = 0, max = 2)
-            public static int decimalPlaces = 1;
+            public static DecimalPlaces decimalPlaces = DecimalPlaces.ONE;
 
             public static boolean showUnit = true;
         }
@@ -209,6 +241,12 @@ public class TritiumConfigBase {
 
         }
 
+        public enum ListMode {
+            ALL,
+            WHITELIST,
+            BLACKLIST
+        }
+
         public static class EntityStacking {
             public static boolean enable = true;
             public static boolean lockMaxedStacks = true;
@@ -220,9 +258,8 @@ public class TritiumConfigBase {
             @Range(min = 0.1, max = 10)
             public static double mergeDistance = 1.5;
             public static String stackCountColor = "#00FF00";
-            @Range(min = 0, max = 2)
-            public static int listMode = 0;
-            public static List<String> itemList = java.util.Arrays.asList(
+            public static ListMode listMode = ListMode.ALL;
+            public static List<String> itemList = List.of(
                     "minecraft:item"
             );
         }
@@ -234,6 +271,83 @@ public class TritiumConfigBase {
 
         public static class CreateOptimizations {
             public static boolean enableRailOffloading = true;
+        }
+    }
+
+    public static class FastRandom {
+        public static boolean enableFastRandom = false;
+        public static Algorithm defaultAlgorithm = Algorithm.L64X128MIXRANDOM;
+        public static long defaultSeed = 0L;
+        public static StreamMode defaultStreamMode = StreamMode.SHARED;
+        @Range(min = 0, max = 1024)
+        public static int defaultSplit = 0;
+
+        @SubCategory("Structure Pool Weighted Sample")
+        public StructurePoolWeightedSample structurePoolWeightedSample = new StructurePoolWeightedSample();
+
+        @SubCategory("Particle Rejection")
+        public ParticleRejection particleRejection = new ParticleRejection();
+
+        @SubCategory("Minecraft Global")
+        public MinecraftGlobal minecraftGlobal = new MinecraftGlobal();
+
+        public enum Algorithm {
+            DEFAULT,
+            VANILLA,
+            INHERIT,
+            RANDOM,
+            SPLITABLERANDOM,
+            L64X128MIXRANDOM,
+            L64X256MIXRANDOM,
+            L128X128MIXRANDOM,
+            L128X256MIXRANDOM,
+            L64X1024MIXRANDOM,
+            L128X1024MIXRANDOM,
+            XOROSHIRO128PLUSPLUS,
+            XOROSHIRO128STARSTAR,
+            XOSHIRO256PLUSPLUS,
+            XOSHIRO256STARSTAR;
+
+            @Override
+            public String toString() {
+                if (this == XOROSHIRO128PLUSPLUS) {
+                    return "推荐 " + name();
+                }
+                return name();
+            }
+        }
+
+        public enum StreamMode {
+            DEFAULT,
+            SHARED,
+            THREAD_LOCAL
+        }
+
+        public static class StructurePoolWeightedSample {
+            public static boolean enable = false;
+            public static Algorithm algorithm = Algorithm.DEFAULT;
+            public static long seed = 0L;
+            public static StreamMode streamMode = StreamMode.DEFAULT;
+            @Range(min = 0, max = 1024)
+            public static int split = 0;
+        }
+
+        public static class MinecraftGlobal {
+            public static boolean enable = false;
+            public static Algorithm algorithm = Algorithm.DEFAULT;
+            public static long seed = 0L;
+            public static StreamMode streamMode = StreamMode.DEFAULT;
+            @Range(min = 0, max = 1024)
+            public static int split = 0;
+        }
+
+        public static class ParticleRejection {
+            public static boolean enable = false;
+            public static Algorithm algorithm = Algorithm.DEFAULT;
+            public static long seed = 0L;
+            public static StreamMode streamMode = StreamMode.DEFAULT;
+            @Range(min = 0, max = 1024)
+            public static int split = 0;
         }
     }
 
